samples/_failures_safe/1761250715_67b485_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_870ab579.c: In function ‘main’:
./samples/SAFE/__tmp_870ab579.c:153: error: expected ‘)’ at end of input
./samples/SAFE/__tmp_870ab579.c:152:16: note: to match this ‘(’
  152 |         fprintf(stderr
      |                ^
./samples/SAFE/__tmp_870ab579.c:152:9: error: too few arguments to function ‘fprintf’
  152 |         fprintf(stderr
      |         ^~~~~~~
In file included from /usr/include/stdio.h:980,
                 from ./samples/SAFE/__tmp_870ab579.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:77:1: note: declared here
   77 | fprintf (FILE *__restrict __stream, const char *__restrict __fmt, ...)
      | ^~~~~~~
./samples/SAFE/__tmp_870ab579.c:152:9: error: expected declaration or statement at end of input
  152 |         fprintf(stderr
      |         ^~~~~~~
./samples/SAFE/__tmp_870ab579.c:152:9: error: expected declaration or statement at end of input
